--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <div id="wrapper">
     <div id="header">
         <h1>Etch-a-sketch</h1>
+        
     </div> 
+
+    <button>Reset</button>
 
     <div id="sketch-box">
         
